--- a/scripts/get_data.ipynb
+++ b/scripts/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "tags": [
      "parameters"
@@ -21,13 +21,14 @@
    },
    "outputs": [],
    "source": [
-    "date = '14/04/2019'\n",
+    "#parameters\n",
+    "date = ''\n",
     "airflow_home = os.environ['AIRFLOW_HOME']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +37,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Interval</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>OrderDate</th>\n",
+       "      <th>ClientID</th>\n",
+       "      <th>ChannelID</th>\n",
+       "      <th>OrderID</th>\n",
+       "      <th>MaterialID</th>\n",
+       "      <th>GroupID</th>\n",
+       "      <th>Cluster</th>\n",
+       "      <th>CancelFlag</th>\n",
+       "      <th>OrderCnt</th>\n",
+       "      <th>DeliveryType</th>\n",
+       "      <th>prepay</th>\n",
+       "      <th>count_edit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3390</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-16</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>1317148</td>\n",
+       "      <td>2</td>\n",
+       "      <td>97255149140</td>\n",
+       "      <td>3186418.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3391</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-16</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>1317148</td>\n",
+       "      <td>2</td>\n",
+       "      <td>97255149140</td>\n",
+       "      <td>3316281.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3392</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-16</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>1317148</td>\n",
+       "      <td>2</td>\n",
+       "      <td>97255149140</td>\n",
+       "      <td>3324456.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3393</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-16</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>1317148</td>\n",
+       "      <td>2</td>\n",
+       "      <td>97255149140</td>\n",
+       "      <td>3226250.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3394</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-16</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>1317148</td>\n",
+       "      <td>2</td>\n",
+       "      <td>97255149140</td>\n",
+       "      <td>3049009.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20612</th>\n",
+       "      <td>2928865</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-17</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>91176784</td>\n",
+       "      <td>2</td>\n",
+       "      <td>98355151062</td>\n",
+       "      <td>3315624.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20613</th>\n",
+       "      <td>2928866</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-17</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>91176784</td>\n",
+       "      <td>2</td>\n",
+       "      <td>98355151062</td>\n",
+       "      <td>3132341.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20614</th>\n",
+       "      <td>2928867</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-17</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>91176784</td>\n",
+       "      <td>2</td>\n",
+       "      <td>98355151062</td>\n",
+       "      <td>3263211.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20615</th>\n",
+       "      <td>2928868</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-17</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>91176784</td>\n",
+       "      <td>2</td>\n",
+       "      <td>98355151062</td>\n",
+       "      <td>3327288.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20616</th>\n",
+       "      <td>2928869</td>\n",
+       "      <td>12-14.</td>\n",
+       "      <td>2018-04-17</td>\n",
+       "      <td>2018-04-15</td>\n",
+       "      <td>91176784</td>\n",
+       "      <td>2</td>\n",
+       "      <td>98355151062</td>\n",
+       "      <td>3263218.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Обычная доставка</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20617 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         index Interval        Date   OrderDate  ClientID  ChannelID  \\\n",
+       "0         3390   12-14.  2018-04-16  2018-04-15   1317148          2   \n",
+       "1         3391   12-14.  2018-04-16  2018-04-15   1317148          2   \n",
+       "2         3392   12-14.  2018-04-16  2018-04-15   1317148          2   \n",
+       "3         3393   12-14.  2018-04-16  2018-04-15   1317148          2   \n",
+       "4         3394   12-14.  2018-04-16  2018-04-15   1317148          2   \n",
+       "...        ...      ...         ...         ...       ...        ...   \n",
+       "20612  2928865   12-14.  2018-04-17  2018-04-15  91176784          2   \n",
+       "20613  2928866   12-14.  2018-04-17  2018-04-15  91176784          2   \n",
+       "20614  2928867   12-14.  2018-04-17  2018-04-15  91176784          2   \n",
+       "20615  2928868   12-14.  2018-04-17  2018-04-15  91176784          2   \n",
+       "20616  2928869   12-14.  2018-04-17  2018-04-15  91176784          2   \n",
+       "\n",
+       "           OrderID  MaterialID  GroupID Cluster  CancelFlag  OrderCnt  \\\n",
+       "0      97255149140   3186418.0     33.0    None           0       1.0   \n",
+       "1      97255149140   3316281.0     29.0    None           0       2.0   \n",
+       "2      97255149140   3324456.0     16.0    None           0       5.0   \n",
+       "3      97255149140   3226250.0     16.0    None           0       3.0   \n",
+       "4      97255149140   3049009.0     35.0    None           0       3.0   \n",
+       "...            ...         ...      ...     ...         ...       ...   \n",
+       "20612  98355151062   3315624.0     36.0    None           0       2.0   \n",
+       "20613  98355151062   3132341.0     35.0    None           0       1.0   \n",
+       "20614  98355151062   3263211.0     35.0    None           0       1.0   \n",
+       "20615  98355151062   3327288.0     61.0    None           0       3.0   \n",
+       "20616  98355151062   3263218.0     35.0    None           0       1.0   \n",
+       "\n",
+       "           DeliveryType  prepay  count_edit  \n",
+       "0      Обычная доставка       0           1  \n",
+       "1      Обычная доставка       0           1  \n",
+       "2      Обычная доставка       0           1  \n",
+       "3      Обычная доставка       0           1  \n",
+       "4      Обычная доставка       0           1  \n",
+       "...                 ...     ...         ...  \n",
+       "20612  Обычная доставка       0           1  \n",
+       "20613  Обычная доставка       0           1  \n",
+       "20614  Обычная доставка       0           1  \n",
+       "20615  Обычная доставка       0           1  \n",
+       "20616  Обычная доставка       0           1  \n",
+       "\n",
+       "[20617 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#pd.read_sql(f'SELECT * FROM orders WHERE Date >= \"01/12/2018\" LIMIT 10', conn).to_csv(...)\n",
-    "with open(f\"{airflow_home}/data/{'-'.join(date.split('/'))}\", 'w+') as f:\n",
-    "    f.write('')"
+    "pd.read_sql(f'SELECT * FROM orders WHERE OrderDate = \"{date}\"', conn).to_csv(f'{airflow_home}/data/output_{date}.csv', index=False)"
    ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
