~ period struct/pipelines, + preprocess

--- a/scripts/get_data.ipynb
+++ b/scripts/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "parameters"
@@ -23,12 +23,13 @@
    "source": [
     "#parameters\n",
     "date = ''\n",
+    "period = ''\n",
     "airflow_home = os.environ['AIRFLOW_HOME']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "if period == 'daily':\n",
+    "    query = f'SELECT * FROM orders WHERE OrderDate = \"{date}\"'\n",
+    "elif period == 'weekly':\n",
+    "    query = f'SELECT * FROM orders WHERE OrderDate >= DATE(\"{date}\", \"-7 day\") AND OrderDate <= \"{date}\"'\n",
+    "elif period == 'monthly':\n",
+    "    query = f'SELECT * FROM orders WHERE OrderDate >= DATE(\"{date}\", \"-30 day\") AND OrderDate <= \"{date}\"'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -331,7 +348,7 @@
     }
    ],
    "source": [
-    "pd.read_sql(f'SELECT * FROM orders WHERE OrderDate = \"{date}\"', conn).to_csv(f'{airflow_home}/data/output_{date}.csv', index=False)"
+    "pd.read_sql(query, conn).to_csv(f'{airflow_home}/data/{period}/output_{date}.csv')"
    ]
   }
  ],
@@ -351,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
