--- a/scripts/get_data.ipynb
+++ b/scripts/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "parameters"
@@ -43,11 +43,13 @@
    "outputs": [],
    "source": [
     "if period == 'daily':\n",
-    "    query = f'SELECT * FROM orders WHERE OrderDate = \"{date}\"'\n",
+    "    delta = '-1 day'\n",
     "elif period == 'weekly':\n",
-    "    query = f'SELECT * FROM orders WHERE OrderDate >= DATE(\"{date}\", \"-7 day\") AND OrderDate <= \"{date}\"'\n",
+    "    delta = '-7 day'\n",
     "elif period == 'monthly':\n",
-    "    query = f'SELECT * FROM orders WHERE OrderDate >= DATE(\"{date}\", \"-30 day\") AND OrderDate <= \"{date}\"'"
+    "    delta = '-1 month'\n",
+    "    \n",
+    "query = f'SELECT * FROM orders WHERE OrderDate >= DATE(\"{date}\", \"{delta}\") AND OrderDate <\"{date}\"'"
    ]
   },
   {
@@ -348,8 +350,15 @@
     }
    ],
    "source": [
-    "pd.read_sql(query, conn).to_csv(f'{airflow_home}/data/{period}/output_{date}.csv')"
+    "pd.read_sql(query, conn).to_csv(f'{airflow_home}/data/{period}/output_{date}.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -368,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
