--- a/scripts/model.ipynb
+++ b/scripts/model.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lightgbm as lgb\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import os\n",
+    "import glob\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import RandomizedSearchCV"
@@ -16,28 +18,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect('../db/sqlite.db')"
+    "airflow_home = os.environ['AIRFLOW_HOME']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_sql('SELECT * FROM orders WHERE OrderDate >= \"2018-01-01\" AND OrderDate <= \"2018-12-31\"', conn)"
+    "df_raw = pd.read_csv(f'{airflow_home}/data/data_preprocessed.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "max_date = df_raw['OrderDate'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['ChannelID',\n",
+    "        'Cluster',\n",
+    "        'prepay',\n",
+    "        'count_edit',\n",
+    "        'interval_time',\n",
+    "        'order_weekday',\n",
+    "        'weekday',\n",
+    "        'interval_high',\n",
+    "        'CancelFlag',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = df_raw[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data.drop('CancelFlag', axis=1)\n",
+    "y = data['CancelFlag']\n",
+    "X.columns = range(len(X.columns))\n",
+    "y.columns = [0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
+    "\n",
+    "dataset = lgb.Dataset(X, label=y, free_raw_data=False)\n",
+    "train_data = lgb.Dataset(X_train, label=y_train, free_raw_data=False)\n",
+    "test_data = lgb.Dataset(X_test, label=y_test, free_raw_data=False, reference=train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param = {\n",
+    "    'num_leaves': 40,\n",
+    "    'objective': 'binary',\n",
+    "    'max_depth': -1,\n",
+    "    #'scale_pos_weight': '1.5',\n",
+    "    #'unbalance': 'true',\n",
+    "    #'min_sum_hessian_in_leaf': 1e-3,\n",
+    "    #'pos_bagging_fraction': 0.8,\n",
+    "    #'neg_bagging_fraction': 0.8,\n",
+    "    #'bagging_fraction': 0.8,\n",
+    "    #'bagging_freq': 5,\n",
+    "    #'max_bin': 120,\n",
+    "    #'min_gain_to_split': \n",
+    "    #'min_data_in_leaf': 50,\n",
+    "    'learning_rate': 0.1,\n",
+    "    #'boosting': 'dart',\n",
+    "    #'lambda_l2': 1.0,\n",
+    "    #'cat_l2': 1.0,\n",
+    "    #'cat_smooth': 50,\n",
+    "    #'top_k': 100,\n",
+    "    'tree_learner': 'data',\n",
+    "    #'max_cat_group': 50\n",
+    "    #'boosting': 'dart'\n",
+    "}\n",
+    "param['metric'] = 'auc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_round = 100\n",
+    "bst = lgb.train(param, train_data, num_round, valid_sets=[test_data], early_stopping_rounds=5, verbose_eval=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightgbm.basic.Booster at 0x7f5a5f6c7750>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score = str(round(bst.best_score['valid_0']['auc'], 4))[2:]\n",
+    "bst.save_model(f'{airflow_home}/model/model_{max_date}_{score}.txt', num_iteration=bst.best_iteration)"
+   ]
   }
  ],
  "metadata": {
@@ -56,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
