--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,34 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 62,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
+    "#parameters\n",
+    "date = ''\n",
+    "period = ''\n",
     "airflow_home = os.environ['AIRFLOW_HOME']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw = pd.read_csv(f'{airflow_home}/data/processed/preprocessed_full.csv')"
+    "df_raw = pd.read_csv(f'{airflow_home}/data/preprocessed/{period}/output_{date}.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_date = df_raw['OrderDate'].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,79 +82,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
-    "\n",
-    "dataset = lgb.Dataset(X, label=y, free_raw_data=False)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42, stratify=y)\n",
     "train_data = lgb.Dataset(X_train, label=y_train, free_raw_data=False)\n",
     "test_data = lgb.Dataset(X_test, label=y_test, free_raw_data=False, reference=train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = {\n",
+    "models = [model.split('/')[-1] for model in glob.glob(f'{airflow_home}/model/*.txt')]\n",
+    "num_round = 100\n",
+    "\n",
+    "if models:\n",
+    "    model = lgb.Booster(model_file=f'{airflow_home}/model/{models[-1]}')\n",
+    "    bst = model.refit(X_train, y_train)\n",
+    "else:\n",
+    "    params = {\n",
     "    'num_leaves': 40,\n",
     "    'objective': 'binary',\n",
     "    'max_depth': -1,\n",
-    "    #'scale_pos_weight': '1.5',\n",
-    "    #'unbalance': 'true',\n",
-    "    #'min_sum_hessian_in_leaf': 1e-3,\n",
-    "    #'pos_bagging_fraction': 0.8,\n",
-    "    #'neg_bagging_fraction': 0.8,\n",
-    "    #'bagging_fraction': 0.8,\n",
-    "    #'bagging_freq': 5,\n",
-    "    #'max_bin': 120,\n",
-    "    #'min_gain_to_split': \n",
-    "    #'min_data_in_leaf': 50,\n",
     "    'learning_rate': 0.1,\n",
-    "    #'boosting': 'dart',\n",
-    "    #'lambda_l2': 1.0,\n",
-    "    #'cat_l2': 1.0,\n",
-    "    #'cat_smooth': 50,\n",
-    "    #'top_k': 100,\n",
     "    'tree_learner': 'data',\n",
-    "    #'max_cat_group': 50\n",
-    "    #'boosting': 'dart'\n",
-    "}\n",
-    "param['metric'] = 'auc'"
+    "    'metric': 'auc',\n",
+    "    'boosting': 'dart'\n",
+    "    }\n",
+    "    bst = lgb.train(params, train_data, num_round, valid_sets=[test_data], early_stopping_rounds=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_round = 100\n",
-    "bst = lgb.train(param, train_data, num_round, valid_sets=[test_data], early_stopping_rounds=5, verbose_eval=0)"
+    "y_pred = bst.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<lightgbm.basic.Booster at 0x7fa12b812240>"
+       "<lightgbm.basic.Booster at 0x7f7c4485b160>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score = str(round(bst.best_score['valid_0']['auc'], 4))[2:]\n",
-    "bst.save_model(f'{airflow_home}/model/model_{max_date}_{score}.txt', num_iteration=bst.best_iteration)"
+    "score = str(round(roc_auc_score(y_test, y_pred), 4))[2:]\n",
+    "bst.save_model(f'{airflow_home}/model/model_{period}_{date}_{score}.txt', num_iteration=bst.best_iteration)"
    ]
   }
  ],
