--- a/scripts/eda.ipynb
+++ b/scripts/eda.ipynb
@@ -21,6 +21,7 @@
    },
    "outputs": [],
    "source": [
+    "#parameters\n",
     "data_path = ''"
    ]
   },
@@ -30,7 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv('../data/output_2018-04-15.csv')\n",
     "df = pd.read_csv(data_path)"
    ]
   },
@@ -220,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
