--- a/scripts/get_data.ipynb
+++ b/scripts/get_data.ipynb
@@ -364,7 +364,7 @@
     }
    ],
    "source": [
-    "pd.read_sql(query, conn).to_csv(f'{airflow_home}/data/{period}/output_{date}.csv', index=False)"
+    "pd.read_sql(query, conn).to_csv(f'{airflow_home}/data/raw/{period}/output_{date}.csv', index=False)"
    ]
   }
  ],
