--- a/scripts/preprocessing.ipynb
+++ b/scripts/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
    "source": [
     "#parameters\n",
     "date = ''\n",
+    "period = ''\n",
     "airflow_home = os.environ['AIRFLOW_HOME']"
    ]
   },
@@ -34,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(f'{airflow_home}/data/monthly/output_{date}.csv')"
+    "data = pd.read_csv(f'{airflow_home}/data/raw/{period}/output_{date}.csv')"
    ]
   },
   {
@@ -145,20 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data.drop(['index', 'Interval', 'Date'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn = sqlite3.connect(f'{airflow_home}/db/sqlite.db')\n",
-    "if_exists = 'append'\n",
-    "if date == '2018-02-01':\n",
-    "    if_exists = 'replace'\n",
-    "data.to_sql('orders_preprocessed', conn, if_exists=if_exists)"
+    "data = data.drop(['Interval', 'Date'], axis=1)"
    ]
   },
   {
@@ -167,9 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_sql('SELECT * FROM orders_preprocessed', conn)\n",
-    "data = data.drop('index', axis=1)\n",
-    "data.to_csv(f'{airflow_home}/data/data_preprocessed.csv', index=False)"
+    "data.to_csv(f'{airflow_home}/data/preprocessed/{period}/output_{date}.csv', index=False)"
    ]
   }
  ],
